[gd_scene load_steps=5 format=2]

[ext_resource path="res://资源/主题.tres" type="Theme" id=1]
[ext_resource path="res://资源/字体/思源宋体/思源宋B-40.tres" type="DynamicFont" id=3]
[ext_resource path="res://脚本/UI/悬浮信息框.gd" type="Script" id=4]
[ext_resource path="res://资源/场景/UI/label.tscn" type="PackedScene" id=5]

[node name="悬浮信息框" type="Popup" groups=["信息框"]]
margin_right = 434.0
margin_bottom = 693.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Vbox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.5
margin_top = -327.0
margin_right = 194.5
margin_bottom = 327.0
custom_constants/separation = 27

[node name="地名" type="Label" parent="Panel/Vbox"]
margin_right = 389.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.345098, 0.686275, 0.760784, 1 )
custom_fonts/font = ExtResource( 3 )
text = "太吾村"

[node name="Vbox2" type="VBoxContainer" parent="Panel/Vbox"]
margin_top = 86.0
margin_right = 389.0
margin_bottom = 328.0
custom_constants/separation = 22

[node name="资源" type="VBoxContainer" parent="Panel/Vbox/Vbox2"]
margin_right = 389.0
margin_bottom = 115.0
custom_constants/separation = 7

[node name="标题" type="Label" parent="Panel/Vbox/Vbox2/资源"]
margin_right = 389.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.345098, 0.686275, 0.760784, 1 )
text = "资源："

[node name="Hbox" type="HBoxContainer" parent="Panel/Vbox/Vbox2/资源"]
margin_top = 30.0
margin_right = 389.0
margin_bottom = 115.0
custom_constants/separation = 18

[node name="Vbox3" type="VBoxContainer" parent="Panel/Vbox/Vbox2/资源/Hbox"]
margin_right = 118.0
margin_bottom = 85.0
custom_constants/separation = 8

[node name="木材" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox3"]
margin_right = 118.0
margin_bottom = 23.0
text = "木材：998"

[node name="食物" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox3"]
margin_top = 31.0
margin_right = 118.0
margin_bottom = 54.0
text = "食物：6664"

[node name="药材" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox3"]
margin_top = 62.0
margin_right = 118.0
margin_bottom = 85.0
text = "药材：6664"

[node name="Vbox4" type="VBoxContainer" parent="Panel/Vbox/Vbox2/资源/Hbox"]
margin_left = 136.0
margin_right = 254.0
margin_bottom = 85.0
custom_constants/separation = 8

[node name="金石" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox4"]
margin_right = 118.0
margin_bottom = 23.0
text = "金石：998"

[node name="织物" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox4"]
margin_top = 31.0
margin_right = 118.0
margin_bottom = 54.0
text = "织物：6664"

[node name="金币" type="Label" parent="Panel/Vbox/Vbox2/资源/Hbox/Vbox4"]
margin_top = 62.0
margin_right = 118.0
margin_bottom = 85.0
text = "金币：6664"

[node name="事件" type="VBoxContainer" parent="Panel/Vbox/Vbox2"]
margin_top = 137.0
margin_right = 389.0
margin_bottom = 190.0
custom_constants/separation = 7

[node name="标题" type="Label" parent="Panel/Vbox/Vbox2/事件"]
margin_right = 389.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.345098, 0.686275, 0.760784, 1 )
text = "事件："

[node name="Vbox3" type="VBoxContainer" parent="Panel/Vbox/Vbox2/事件"]
margin_top = 30.0
margin_right = 389.0
margin_bottom = 53.0
custom_constants/separation = 8

[node name="Name" parent="Panel/Vbox/Vbox2/事件/Vbox3" instance=ExtResource( 5 )]
margin_right = 389.0
text = "赶集"

[node name="NPC" type="VBoxContainer" parent="Panel/Vbox/Vbox2"]
margin_top = 212.0
margin_right = 389.0
margin_bottom = 242.0
custom_constants/separation = 7

[node name="标题" type="Label" parent="Panel/Vbox/Vbox2/NPC"]
margin_right = 389.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.345098, 0.686275, 0.760784, 1 )
text = "所有人物："

[node name="Vbox3" type="VBoxContainer" parent="Panel/Vbox/Vbox2/NPC"]
margin_top = 30.0
margin_right = 389.0
margin_bottom = 30.0
